--- a/ros2_ws/src/sensors/package.xml
+++ b/ros2_ws/src/sensors/package.xml
@@ -19,6 +19,11 @@
   <depend>geometry_msgs</depend>
   <depend>message_filters</depend>
 
+  <!-- runtime deps for down-facing USB camera -->
+  <exec_depend>usb_cam</exec_depend>
+  <exec_depend>image_transport</exec_depend>
+  <exec_depend>camera_info_manager</exec_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
