--- a/Docker/dev/Dockerfile.nvidia
+++ b/Docker/dev/Dockerfile.nvidia
@@ -97,6 +97,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 # Initialize rosdep
 RUN rosdep init || true && rosdep update
+# Install backward-ros so colcon build succeeds
+apt update && apt install -y ros-humble-backward-ros
 
 # ---------------------------------------------------------
 # 2. Install ZED SDK 5.1.1 (CUDA 12.8 / Ubuntu 22.04)
@@ -128,6 +130,7 @@ RUN pip3 install --no-cache-dir \
         typing_extensions \
         sympy \
         cython
+
 
 # ---------------------------------------------------------
 # 4. Environment Setup
