--- a/ros2_ws/src/vision/model_pipeline/data_real.yaml
+++ b/ros2_ws/src/vision/model_pipeline/data_real.yaml
@@ -4,5 +4,5 @@ train: train/images
 val: val/images
 test: test/images
 
-nc: 10
-names: ['gate', 'lane_marker', 'red_pipe', 'white_pipe', 'octagon', 'table', 'bin', 'board', 'shark', 'sawfish']
+nc: 6
+names: ['gate', 'octagon_table', 'octagon_top', 'path_marker', 'sawfish', 'shark']
