--- a/ros2_ws/src/vision/package.xml
+++ b/ros2_ws/src/vision/package.xml
@@ -10,6 +10,9 @@
   <maintainer email="lucageuzaine@hotmail.com">root</maintainer>
   <license>GPL-3.0-or-later</license>
 
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
+
   <depend>rclpy</depend>
   <depend>sensor_msgs</depend>
   <depend>cv_bridge</depend>
@@ -20,6 +23,6 @@
   <test_depend>python3-pytest</test_depend>
 
   <export>
-    <build_type>ament_python</build_type>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
