--- a/ros2_ws/src/vision/package.xml
+++ b/ros2_ws/src/vision/package.xml
@@ -18,7 +18,7 @@
   <build_depend>cv_bridge</build_depend>
   <build_depend>auv_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
-
+  <build_depend>std_msgs</build_depend>
   <build_depend>eigen3_cmake_module</build_depend>
   <build_depend>eigen3</build_depend>
 
@@ -27,6 +27,7 @@
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>auv_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
+  <build_depend>std_msgs</build_depend>
   <exec_depend>eigen3</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
